Fix responsive spacing

--- a/app/components/search-result/style.scss
+++ b/app/components/search-result/style.scss
@@ -81,6 +81,10 @@ $default-link-hover-color: #23527c;
     padding-right: 0px;
 }
 
+.date-line-padding {
+    padding: 0px 15px 0px 15px;
+}
+
 .default-line-padding {
     padding: 2px 15px 2px 15px;
 }
